# swim

./: .cargo-rdme.toml  Cargo.toml  README.md
.github/workflows/: build-and-test.yml  check-readme.yml
cargo-swim/: Cargo.toml
example/minimal/: Cargo.toml  settings.ron
example/minimal/src/: main.rs  settings.ron
examples/apps/: Cargo.toml  settings.ron
examples/apps/base/: Cargo.toml
examples/apps/base/src/: lib.rs  view.rs  views.rs
examples/apps/src/: main.rs
examples/middleware/: Cargo.toml  settings.ron
examples/middleware/src/: main.rs  middlewares.rs
examples/minimal/: Cargo.toml
examples/minimal/src/: main.rs
swim/: CHANGELOG.md  Cargo.toml
swim-cli/: Cargo.toml
swim-contrib/: CHANGELOG.md  Cargo.toml
swim-core/: CHANGELOG.md  Cargo.toml
swim-core/src/: app.rs  error.rs  http.rs  lib.rs  log.rs  macros.rs  middleware.rs  model.rs  project.rs  route.rs  settings.rs  sugar.rs  view.rs
swim-core/src/app/: config.rs  mod.rs
swim-core/src/settings/: mod.rs
swim-db/: Cargo.toml
swim-middleware/: Cargo.toml
swim-template/: Cargo.toml
swim-util/: CHANGELOG.md  Cargo.toml
swim-util/src/: lib.rs  macros.rs
swim/src/: lib.rs
