[package]
name = "cargo-swim"
version = "0.0.0"
edition = "2021"
authors = ["Syed Ahkam <smahkam57@gmail.com>"]
description = "Cargo subcommand for interacting with the swim web framework"
homepage = "https://github.com/SyedAhkam/swim"
repository = "https://github.com/SyedAhkam/swim"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["swim", "cli", "web-framework", "cargo"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]