[package]
name = "swim-core"
version = "0.0.0"
edition = "2021"
authors = ["Syed Ahkam <smahkam57@gmail.com>"]
homepage = "https://github.com/SyedAhkam/swim"
repository = "https://github.com/SyedAhkam/swim"
license = "MIT"
categories = ["web-programming::http-server"]
keywords = ["swim", "web-framework", "core"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = [] }
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
hyper = { version = "0.14", features = [
    "http1",
    "http2",
    "server",
    "tcp"
]}
routerify = { version = "3.0", features = ["hyper-http1", "hyper-http2"] }
async-trait = "0.1"
thiserror = "1.0"