[package]
name = "swim-middleware"
version = "0.0.0"
edition = "2021"
authors = ["Syed Ahkam <smahkam57@gmail.com>"]
description = "Middlewares for the swim web framework"
homepage = "https://github.com/SyedAhkam/swim"
repository = "https://github.com/SyedAhkam/swim"
license = "MIT"
categories = ["web-programming::http-server"]
keywords = ["swim", "web-framework", "middleware"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]