[package]
name = "swim"
version = "0.2.2"
edition = "2021"
authors = ["Syed Ahkam <smahkam57@gmail.com>"]
description = "A batteries included rust web framework  ⚡🏊"
homepage = "https://github.com/SyedAhkam/swim"
repository = "https://github.com/SyedAhkam/swim"
license = "MIT"
categories = ["web-programming::http-server"]
keywords = ["swim", "server", "web-framework", "asynchronous", "hyper"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swim-core = { path = "../swim-core", version="0.2.1" }
swim-util = { path = "../swim-util", version="0.2.1" }
