[package]
name = "apps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swim = { path = "../../swim" }
tokio = { version = "1.0", features = ["full"] }
base = { path = "./base" }

[workspace]
members = [
    "base",
]